--- a/aza_intranet_front/src/index.css
+++ b/aza_intranet_front/src/index.css
@@ -36,6 +36,7 @@ body {
  margin: 0;
  display: flex;
  place-items: center;
+ justify-content: center;
  min-width: 320px;
  min-height: 100vh;
  background-color: white;
@@ -44,10 +45,6 @@ body {
  background-position: center;
 
 }
-
-
-
-
 
 
 h1 {
