--- a/aza_intranet_front/src/scenes/Appointments/Appointment.css
+++ b/aza_intranet_front/src/scenes/Appointments/Appointment.css
@@ -1,43 +1,59 @@
 /* Appointment.css */
 
+.title {
+  color: #1890ff;
+  margin-bottom: 20px;
+  font-family: "fansong";
+  display: flex;
+  justify-content: center;
+}
 
-  .title {
-    color: #1890ff;
-    margin-bottom: 20px;
-    font-family: 'fansong';
-    display: flex;
-    justify-content: center;
+.form-container {
+  height: 80vh;
+  padding: 10px;
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+}
 
-  }
-  
-  .form-container {
-    
-    height: 80vh;
-    padding: 10px;
-    border-radius: 8px;
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-  }
-  
-  .form-row {
-    display: flex;
-    justify-content: space-between;
-    gap: 20px;
-  }
-  
-  .ant-form-item-label {
-    font-weight: bold;
-  }
-  
-  .ant-input,
-  .ant-select-selector {
-    width: 100%;
-  }
-  
-  .ant-input-number {
-    width: 100%;
-  }
-  
-  .ant-btn {
-    width: 100%;
-  }
-  
+.form-row {
+  display: flex;
+  justify-content: space-between;
+  gap: 20px;
+}
+
+.ant-form-item-label {
+  font-weight: bold;
+}
+
+.ant-input,
+.ant-select-selector {
+  width: 100%;
+}
+
+.ant-input-number {
+  width: 100%;
+}
+
+.ant-btn {
+  width: 100%;
+}
+.table_container {
+  width: 84%;
+  margin-left: 16%;
+  margin-top: 0%;
+  background-color: transparent !important;
+  font-weight: bolder !important; /* Aplicar negrita */
+}
+/* Cambiar el color del texto de las columnas con !important */
+.table_container th {
+  background-color: transparent !important;
+}
+
+.table_container2 {
+  background-color: transparent !important;
+  font-weight: bolder !important; /* Aplicar negrita */
+}
+/* Cambiar el color del texto de las columnas con !important */
+.table_container2 th {
+  background-color: transparent !important;
+}
