Añadida logica para listas de dentistas y mejorado en dto de dentistad

--- a/aza_intranet_front/src/scenes/Appointments/Appointment.css
+++ b/aza_intranet_front/src/scenes/Appointments/Appointment.css
@@ -57,3 +57,15 @@
 .table_container2 th {
   background-color: transparent !important;
 }
+
+.table_container3 {
+  width: 95%;
+  margin-left: 12%;
+  margin-top: 0%;
+  background-color: transparent !important;
+  font-weight: bolder !important; /* Aplicar negrita */
+}
+/* Cambiar el color del texto de las columnas con !important */
+.table_container3 th {
+  background-color: transparent !important;
+}
