--- a/aza_intranet_front/src/index.css
+++ b/aza_intranet_front/src/index.css
@@ -1,6 +1,8 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;1,600;1,700&display=swap');
-
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 *{
  margin: 0;
  padding: 0;
