--- a/aza_intranet_front/src/index.css
+++ b/aza_intranet_front/src/index.css
@@ -55,6 +55,8 @@ h1 {
 }
 
 button {
+  display: flex;
+  justify-content: center;
  border-radius: 8px;
  border: 1px solid transparent;
  padding: 0.6em 1.2em;
@@ -62,6 +64,7 @@ button {
  font-weight: 500;
  font-family: inherit;
  background-color: #1a1a1a;
+ color: white;
  cursor: pointer;
  transition: border-color 0.25s;
 }
