--- a/aza_intranet_front/src/index.css
+++ b/aza_intranet_front/src/index.css
@@ -10,8 +10,7 @@
 }
 
 :root {
- font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
- font-family: 'Poppins', sans-serif;
+  font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
  line-height: 1.5;
  font-weight: 400;
 
@@ -55,8 +54,8 @@ h1 {
 }
 
 button {
-  display: flex;
-  justify-content: center;
+  /*display: flex;
+  justify-content: center;*/
  border-radius: 8px;
  border: 1px solid transparent;
  padding: 0.6em 1.2em;
