--- a/aza_intranet_front/src/scenes/login/LoginForm.css
+++ b/aza_intranet_front/src/scenes/login/LoginForm.css
@@ -1,11 +1,11 @@
 .wrapper{
     width: 420px;
-    background: black!important;
     backdrop-filter: blur(30px) ;
     border: 2px solid rgba(255, 255, 255, .2);
     box-shadow: 0 0 10px rgba(255, 255, 255, .2);
     color: black;
     border-radius: 20px;
+    border-color: black;
     padding: 20px 20px;
     background-image: url('./assets/background.jpg') no-repeat !important;
     background-size: cover !important;
@@ -15,6 +15,8 @@
 .wrapper h1{
     font-size: 36px;
     text-align: center;
+    border-color: black;
+
 }
 
 .wrapper .input-box{
@@ -22,6 +24,8 @@
     width: 100%;
     height: 50%;
     margin: 30px 0;
+    border-color: black;
+
 
 }
 .input-box input{
@@ -33,6 +37,8 @@
     font-size: 16px;
     color: black;
     padding: 20px 45px 20px 20px;
+    border-color: black;
+
 
 }
 
