--- a/aza_intranet_front/src/index.css
+++ b/aza_intranet_front/src/index.css
@@ -1,89 +1,84 @@
-
-@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;1,600;1,700&display=swap');
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-*{
- margin: 0;
- padding: 0;
- box-sizing: border-box;
+@import url("https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;1,600;1,700&display=swap");
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 :root {
   font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
- line-height: 1.5;
- font-weight: 400;
+  line-height: 1.5;
+  font-weight: 400;
 
- color-scheme: light dark;
- color: rgba(255, 255, 255, 0.87);
- background-color: #242424;
+  color-scheme: light dark;
+  color: rgba(255, 255, 255, 0.87);
+  background-color: #242424;
 
- font-synthesis: none;
- text-rendering: optimizeLegibility;
- -webkit-font-smoothing: antialiased;
- -moz-osx-font-smoothing: grayscale;
+  font-synthesis: none;
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
 
 a {
- font-weight: 500;
- color: #646cff;
- text-decoration: inherit;
+  font-weight: 500;
+  color: #646cff;
+  text-decoration: inherit;
 }
 a:hover {
- color: #535bf2;
+  color: #535bf2;
 }
 
 body {
- margin: 0;
- display: flex;
- place-items: center;
- justify-content: center;
- min-width: 320px;
- min-height: 100vh;
- background-color: white;
- background: url('./assets/background2.jpg') no-repeat;
- background-size: cover;
- background-position: center;
-
+  margin: 0;
+  display: flex;
+  place-items: center;
+  justify-content: center;
+  min-width: 320px;
+  min-height: 100vh;
+  background-color: white;
+  background: url("./assets/aza_intranet_logo_sin_fondo.png") top no-repeat,
+    url("./assets/background2.jpg") center no-repeat;
+  background-size: cover;
+  background-position: center;
 }
 
-
 h1 {
- font-size: 3.2em;
- line-height: 1.1;
+  font-size: 3.2em;
+  line-height: 1.1;
 }
 
 button {
   /*display: flex;
   justify-content: center;*/
- border-radius: 8px;
- border: 1px solid transparent;
- padding: 0.6em 1.2em;
- font-size: 1em;
- font-weight: 500;
- font-family: inherit;
- background-color: #1a1a1a;
- color: white;
- cursor: pointer;
- transition: border-color 0.25s;
+  border-radius: 8px;
+  border: 1px solid transparent;
+  padding: 0.6em 1.2em;
+  font-size: 1em;
+  font-weight: 500;
+  font-family: inherit;
+  background-color: #1a1a1a;
+  color: white;
+  cursor: pointer;
+  transition: border-color 0.25s;
 }
 button:hover {
- border-color: #646cff;
+  border-color: #646cff;
 }
 button:focus,
 button:focus-visible {
- outline: 4px auto -webkit-focus-ring-color;
+  outline: 4px auto -webkit-focus-ring-color;
 }
 
 @media (prefers-color-scheme: light) {
- :root {
-   color: #213547;
-   background-color: #ffffff;
- }
- a:hover {
-   color: #747bff;
- }
- button {
-   background-color: #f9f9f9;
- }
+  :root {
+    color: #213547;
+    background-color: #ffffff;
+  }
+  a:hover {
+    color: #747bff;
+  }
+  button {
+    background-color: #f9f9f9;
+  }
 }
