--- a/aza_intranet_front/src/scenes/Home/Home.css
+++ b/aza_intranet_front/src/scenes/Home/Home.css
@@ -7,6 +7,7 @@
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Sombra ligera */
     border-radius: 10px; /* Bordes redondeados */
     padding: 20px;
+    margin-top: 0;
     
   }
   
