--- a/aza_intranet_front/src/index.css
+++ b/aza_intranet_front/src/index.css
@@ -31,14 +31,12 @@ a:hover {
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
-  justify-content: center;
   min-width: 320px;
   min-height: 100vh;
   background-color: white;
-  background: url("./assets/background2.jpg") no-repeat;
+  background: url("./assets/background2.jpg") repeat;
   background-position: center;
+  overflow-y: auto;
 
 }
 
