--- a/aza_intranet_front/src/scenes/login/LoginForm.css
+++ b/aza_intranet_front/src/scenes/login/LoginForm.css
@@ -6,10 +6,12 @@
     color: black;
     border-radius: 20px;
     border-color: black;
-    padding: 20px 20px;
-    background-image: url('./assets/background.jpg') no-repeat !important;
-    background-size: cover !important;
-    background-position: center !important;
+    padding: 20px 20px;   
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%); 
+
 }
 
 .wrapper h1{
@@ -56,7 +58,7 @@
 
 .wrapper .remember-forgot{
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
     font-size: 14.5px;
     margin: -15px 0 15px;
 }
